test/implicitDup23_6.slq
def main(){
	x := H(0);
	y := dup(x);
	z := y;
	forget(z);
	if y { /// error
		x := H(x);
	}
	return x;
}
